# julia_sets_cuda

./: CMakeLists.txt  README.md
color_maps/: custom.txt
src/: kernels.cu  kernels.hpp  main.cu  main.hpp
